--- a/CarRentalManagementSystem/Views/Home/Gallery.cshtml
+++ b/CarRentalManagementSystem/Views/Home/Gallery.cshtml
@@ -53,10 +53,10 @@
                                 <img src="/images/cars/suv1.jpg" alt="Thumbnail" class="thumb-img">
                             </div>
                             <div class="thumbnail">
-                                <img src="/images/facilities/showroom.jpg" alt="Thumbnail" class="thumb-img">
+                                <img src="/images/cars/7ae40d47-35f4-4585-a29f-1bbf522d1f4f_Screenshot 2025-09-05 223541.png" alt="Thumbnail" class="thumb-img">
                             </div>
                             <div class="thumbnail">
-                                <img src="/images/cars/sports1.jpg" alt="Thumbnail" class="thumb-img">
+                                <img src="/images/cars/88f601ed-9b35-49bc-8dc3-38d3b445c32b.jpg" alt="Thumbnail" class="thumb-img">
                             </div>
                         </div>
                     </div>
